--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,30 +45,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "for i in range(len(gandalf)):\n",
+    "    if (gandalf[i] > saruman[i]):\n",
+    "        gandalf_wins += 1\n",
+    "    elif (gandalf[i] < saruman[i]):\n",
+    "        saruman_wins += 1\n",
+    "    # else:\n",
+    "        # tie, no one wins --> TODO: no points for anyone?\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Gandalf wins\n"
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
+    "if (gandalf_wins > saruman_wins):\n",
+    "    print('Gandalf wins')\n",
+    "elif (gandalf_wins < saruman_wins):\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('Tie')\n",
     "\n"
    ]
   },
@@ -116,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,51 +161,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "gandalf_dmg = []\n",
+    "saruman_dmg = []\n",
+    "\n",
+    "for spell in gandalf:\n",
+    "    gandalf_dmg.append(POWER[spell])\n",
+    "\n",
+    "for spell in saruman:\n",
+    "    saruman_dmg.append(POWER[spell])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Gandalf wins\n"
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
+    "gandalf_strikes = 0\n",
+    "saruman_strikes = 0\n",
+    "for i in range(len(gandalf_dmg)):\n",
+    "    if (gandalf_dmg[i] > saruman_dmg[i]):\n",
+    "        gandalf_strikes += 1\n",
+    "        saruman_strikes = 0\n",
+    "    elif (gandalf_dmg[i] < saruman_dmg[i]):\n",
+    "        saruman_strikes += 1\n",
+    "        gandalf_strikes = 0\n",
     "\n",
+    "    if (gandalf_strikes == 3 or saruman_strikes == 3):\n",
+    "        break\n",
     "\n",
-    "# Execution of spell clashes\n",
-    "\n",
-    "\n",
-    "\n",
-    "# check for 3 wins in a row\n",
-    "\n",
-    "\n",
-    "# check the winner\n"
+    "# check the winner\n",
+    "if (gandalf_strikes == 3):\n",
+    "    print('Gandalf wins')\n",
+    "elif (saruman_strikes == 3):\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('No winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Gandalf avarage =  35.0\nSaruman avarage =  30.5\n"
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
+    "gandalf_avg = sum(gandalf_dmg) / len(gandalf_dmg)\n",
+    "print('Gandalf avarage = ', gandalf_avg)\n",
+    "\n",
+    "saruman_avg = sum(saruman_dmg) / len(saruman_dmg)\n",
+    "print('Saruman avarage = ', saruman_avg)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Gandalf deviation =  17.795130420052185\nSaruman deviation =  16.40629960309962\n"
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "import statistics\n",
+    "\n",
+    "gandalf_deviation = statistics.stdev(gandalf_dmg)\n",
+    "print('Gandalf deviation = ', gandalf_deviation)\n",
+    "\n",
+    "saruman_deviation = statistics.stdev(saruman_dmg)\n",
+    "print('Saruman deviation = ', saruman_deviation)\n"
    ]
   },
   {
@@ -210,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
