--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,49 +25,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "0 - stone\n1 - paper\n2 - scissors\n\nMachine:  scissors\nHuman:  scissors\nMachine wins:  0\nHuman wins:  0\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  paper\nHuman:  paper\nMachine wins:  0\nHuman wins:  0\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  scissors\nMachine wins:  1\nHuman wins:  0\nNo winner this time, lets play again\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  paper\nMachine wins:  0\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  scissors\nMachine wins:  1\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  paper\nHuman:  paper\nMachine wins:  1\nHuman wins:  1\nNo winner this time, lets play again\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  paper\nMachine wins:  0\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  paper\nHuman:  paper\nMachine wins:  0\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  scissors\nHuman:  paper\nMachine wins:  1\nHuman wins:  1\nNo winner this time, lets play again\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  paper\nMachine wins:  0\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  stone\nHuman:  paper\nMachine wins:  0\nHuman wins:  2\n0 - stone\n1 - paper\n2 - scissors\n\nMachine:  paper\nHuman:  paper\nMachine wins:  0\nHuman wins:  2\nThe winner is:  human\n"
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "opts = ['stone', 'paper', 'scissors']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "games_total = 3\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "games_to_win = 2\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def resolve_computer_move(opts):\n",
+    "    return random.choice(opts)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
+    "def request_user_move(opts):\n",
+    "    while True:\n",
+    "        for pos in range(len(opts)):\n",
+    "            p = str(pos) + ' - ' + opts[pos]\n",
+    "            print(p)\n",
+    "        val = input('Select an option: ')\n",
+    "        if (val.isdigit()):\n",
+    "            intval = int(val)\n",
+    "            if (intval < len(opts) and intval >= 0):\n",
+    "                return opts[intval]\n",
+    "        print('Please, chose an option from the given ones\\n')\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "def resolve_combat(machine, human):\n",
+    "    if (machine == human):\n",
+    "        return 0\n",
+    "    elif (machine == 'stone'):\n",
+    "        if (human == 'paper'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    elif (machine == 'paper'):\n",
+    "        if (human == 'scissors'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    else:\n",
+    "        if (human == 'stone'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
     "\n",
-    "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def show_state(machine, human, wins):\n",
+    "    print('\\nMachine: ', machine)\n",
+    "    print('Human: ', human)\n",
+    "    print('Machine wins: ', wins['machine'])\n",
+    "    print('Human wins: ', wins['human'])\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "wins = {'machine' : 0, 'human' : 0}\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
-    "\n",
+    "winner = ''\n",
+    "games = 0\n",
+    "while True:\n",
+    "    computer_move = resolve_computer_move(opts)\n",
+    "    human_move = request_user_move(opts)\n",
+    "    res = resolve_combat(computer_move, human_move)\n",
+    "    if (res == 1):\n",
+    "        wins['machine'] += 1\n",
+    "    elif (res == 2):\n",
+    "        wins['human'] += 1\n",
+    "    show_state(computer_move, human_move, wins)\n",
+    "    games += 1\n",
+    "    if (games == games_total):\n",
+    "        if (wins['machine'] == games_to_win):\n",
+    "            winner = 'machine'\n",
+    "            break\n",
+    "        elif (wins['human'] == games_to_win):\n",
+    "            winner = 'human'\n",
+    "            break\n",
+    "        else:\n",
+    "            print('No winner this time, lets play again')\n",
+    "            games = 0\n",
+    "            wins['machine'] = 0\n",
+    "            wins['human'] = 0\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "print('The winner is: ', winner)"
    ]
   },
   {
@@ -93,58 +157,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "That's not even a number\nThat's not even a number\nThat's not even a number\nThat's not even a number\nSaid ODD number please...\n0 - stone\n1 - paper\n2 - scissors\n3 - lizard\n4 - spock\n\nMachine:  paper\nHuman:  lizard\nMachine wins:  0\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n3 - lizard\n4 - spock\n\nMachine:  scissors\nHuman:  lizard\nMachine wins:  1\nHuman wins:  1\n0 - stone\n1 - paper\n2 - scissors\n3 - lizard\n4 - spock\n\nMachine:  stone\nHuman:  lizard\nMachine wins:  2\nHuman wins:  1\nThe winner is:  machine\n"
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
+    "def request_odd_num():\n",
+    "    while True:\n",
+    "        val = input('Introduce an ODD number of games to play: ')\n",
+    "        if (val.isdigit()):\n",
+    "            if (int(val) % 2 != 0):\n",
+    "                return abs(int(val))\n",
+    "            else:\n",
+    "                print('Said ODD number please...')\n",
+    "        else: \n",
+    "            print('That\\'s not even a number')\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
+    "opts = ['stone', 'paper', 'scissors', 'lizard', 'spock']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "max_games = request_odd_num()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "def calculate_games_to_win(max_games):\n",
+    "    if (max_games == 1):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (int(max_games / 2)) + 1\n",
     "\n",
+    "games_to_win = calculate_games_to_win(max_games)\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def resolve_computer_move(opts):\n",
+    "    return random.choice(opts)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
+    "def request_user_opt(opts):\n",
+    "    while True:\n",
+    "        for pos in range(len(opts)):\n",
+    "            p = str(pos) + ' - ' + opts[pos]\n",
+    "            print(p)\n",
+    "        val = input('Select an option: ')\n",
+    "        if (val.isdigit()):\n",
+    "            intval = int(val)\n",
+    "            if (intval < len(opts) and intval >= 0):\n",
+    "                return opts[intval]\n",
+    "        print('Please, chose an option from the given ones\\n')\n",
     "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
-    "\n",
+    "def resolve_combat(machine, human):\n",
+    "    if (machine == human):\n",
+    "        return 0\n",
+    "    elif (machine == 'stone'):\n",
+    "        if (human == 'paper' or human == 'spock'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    elif (machine == 'paper'):\n",
+    "        if (human == 'scissors' or human == 'lizard'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    elif (machine == 'scissors'):\n",
+    "        if (human == 'stone' or human == 'spock'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    elif (machine == 'lizard'):\n",
+    "        if (human == 'stone' or human == 'scissors'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    else:\n",
+    "        if (human == 'paper' or human == 'lizard'):\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def show_state(machine, human, wins):\n",
+    "    print('\\nMachine: ', machine)\n",
+    "    print('Human: ', human)\n",
+    "    print('Machine wins: ', wins['machine'])\n",
+    "    print('Human wins: ', wins['human'])\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "wins = {'machine' : 0, 'human' : 0}\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
-    "    \n",
+    "winner = ''\n",
+    "games = 0\n",
+    "while True:\n",
+    "    computer_move = resolve_computer_move(opts)\n",
+    "    human_move = request_user_move(opts)\n",
+    "    res = resolve_combat(computer_move, human_move)\n",
+    "    if (res == 1):\n",
+    "        wins['machine'] += 1\n",
+    "    elif (res == 2):\n",
+    "        wins['human'] += 1\n",
+    "    show_state(computer_move, human_move, wins)\n",
+    "    games += 1\n",
+    "    if (games == max_games):\n",
+    "        if (wins['machine'] == games_to_win):\n",
+    "            winner = 'machine'\n",
+    "            break\n",
+    "        elif (wins['human'] == games_to_win):\n",
+    "            winner = 'human'\n",
+    "            break\n",
+    "        else:\n",
+    "            print('No winner this time, lets play again')\n",
+    "            games = 0\n",
+    "            wins['machine'] = 0\n",
+    "            wins['human'] = 0\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "print('The winner is: ', winner)\n"
    ]
   },
   {
@@ -157,9 +307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bite61034f5ef0c466e91726dec7b83c0f7"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
