--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Days =  10.466666666666667\n"
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "total_height = 128\n",
+    "day_height = 30\n",
+    "night_height = -20\n",
+    "pos = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "total_days = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "while (pos < total_height):\n",
+    "    # day part\n",
+    "    if ((pos + day_height) < total_height):\n",
+    "        pos += day_height\n",
+    "    else:\n",
+    "        left_to_rise = total_height - pos\n",
+    "        # assuming 12 hours day 12hours night to calculate\n",
+    "        total_days += (left_to_rise * (12 / day_height)) / 24\n",
+    "        break\n",
+    "    pos += night_height\n",
+    "    total_days += 1\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "print('Days = ', total_days)"
    ]
   },
   {
@@ -69,33 +91,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Days =  5.2555555555555555\nMax =  77\nMin =  21\nAvarage =  38.0\nDeviation =  20.784609690826528\n"
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
+    "import statistics\n",
     "\n",
+    "total_height = 128\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_height = -20\n",
+    "pos = 0\n",
+    "displacement_list = []\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "total_days = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
+    "for advance in advance_cm:\n",
+    "    if((pos + advance) < total_height):\n",
+    "        pos += advance\n",
+    "        displacement_list.append(advance)\n",
+    "    else:\n",
+    "        left_to_rise = total_height - pos\n",
+    "        displacement_list.append(left_to_rise)\n",
+    "        # assuming 12 hours day 12hours night to calculate\n",
+    "        total_days += (left_to_rise * (12 / advance)) / 24\n",
+    "        break\n",
+    "    pos += night_height\n",
+    "    total_days += 1\n",
     "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
+    "print('Days = ', total_days)\n",
     "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
+    "print('Max = ', max(displacement_list))\n",
+    "print('Min = ', min(displacement_list))\n",
     "\n",
     "\n",
     "# What is its average progress?\n",
+    "avg = sum(displacement_list)/len(displacement_list)\n",
+    "print('Avarage = ', avg)\n",
     "\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "deviation = statistics.stdev(displacement_list)\n",
+    "print('Deviation = ', deviation)\n"
    ]
   },
   {
@@ -122,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
