--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Minimum:  0\nMaximum:  90\nList of temperatures above 70:  [76, 80, 81, 80, 83, 90, 79]\nMean temperature:  60.25\nShowing new list of temperatures:  [33, 66, 65, 60, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\nList of temperatures in Farenheit:  [91.4, 150.8, 149.0, 140.0, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
+    "temperatures = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "print('Minimum: ', min(temperatures))\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "print('Maximum: ', max(temperatures))\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
+    "above_70 = []\n",
+    "for temperature in temperatures:\n",
+    "    if (temperature > 70):\n",
+    "        above_70.append(temperature)\n",
     "\n",
+    "print('List of temperatures above 70: ', above_70)\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
+    "import statistics\n",
     "\n",
+    "print('Mean temperature: ', statistics.mean(temperatures))\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
+    "def calc_estimated_value(elems):\n",
+    "    prob = 1/ len(elems)\n",
+    "    estimated = 0\n",
+    "    for elem in elems:\n",
+    "        estimated += prob * elem\n",
+    "    return estimated\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
+    "new_value = calc_estimated_value(temperatures)\n",
+    "temperatures[3] = int(new_value)\n",
+    "print('Showing new list of temperatures: ', temperatures)\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "farenheit_temperatures = []\n",
+    "\n",
+    "for temperature in temperatures:\n",
+    "    farenheit_temperatures.append(temperature * 1.8 + 32)\n",
+    "\n",
+    "print('List of temperatures in Farenheit: ', farenheit_temperatures)\n"
    ]
   },
   {
@@ -144,12 +169,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "True\n"
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "def review_last_elements(elems, less_than, last_elem):\n",
+    "    pos = 0\n",
+    "    while pos > last_elem:\n",
+    "        pos -= 1\n",
+    "        if (elems[pos] < less_than):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def change_cooling_system(temperatures):\n",
+    "    tmp_list = []\n",
+    "    for temperature in temperatures:\n",
+    "        if (temperature > 80):\n",
+    "            return True\n",
+    "        tmp_list.append(temperature)\n",
+    "        if (len(tmp_list) >= 4 and review_last_elements(temperatures, 70, -4)):\n",
+    "            return True\n",
+    "    if (statistics.mean(temperatures) > 65):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "print(change_cooling_system(temperatures))\n"
    ]
   },
   {
@@ -165,12 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "List of hours above 70:  [9, 10, 11, 12, 13, 14, 15]\n"
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "hours = []\n",
+    "\n",
+    "for hour in range(len(temperatures)):\n",
+    "    if temperatures[hour] > 70:\n",
+    "        hours.append(hour)\n",
+    "\n",
+    "print('List of hours above 70: ', hours)\n"
    ]
   },
   {
@@ -185,22 +248,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Avarage in ºC:  62.75\nAvarage in ºF:  144.95000000000002\n"
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
-    "\n"
+    "print('Avarage in ºC: ', statistics.mean(temperatures))\n",
+    "print('Avarage in ºF: ', statistics.mean(farenheit_temperatures))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Standard deviation in ºC:  14.958638626733965\nStandard deviation in ºF:  26.925549528121138\n"
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "\n"
+    "print('Standard deviation in ºC: ', statistics.stdev(temperatures))\n",
+    "print('Standard deviation in ºF: ', statistics.stdev(farenheit_temperatures))\n"
    ]
   },
   {
@@ -227,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
