--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,53 +32,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "9\n"
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "stops_count = len(stops)\n",
+    "print (stops_count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "passengers_count = []\n",
+    "\n",
+    "for stop in stops:\n",
+    "    passengers_diff = stop[0] - stop[1]\n",
+    "    if (len(passengers_count) == 0):\n",
+    "        passengers_count.append(passengers_diff)\n",
+    "    else:\n",
+    "        passengers_count.append(passengers_count[-1] + passengers_diff)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Maximum occupation =  14\n"
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "print('Maximum occupation = ', max(passengers_count))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Avarage occupation =  9.333333333333334\nStandard deviation =  3.391164991562634\n"
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "import statistics\n",
+    "avg = sum(passengers_count) / len(passengers_count)\n",
+    "print('Avarage occupation = ', avg)\n",
+    "deviation = statistics.stdev(passengers_count)\n",
+    "print('Standard deviation = ', deviation)"
    ]
   },
   {
@@ -105,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
